ADDED: Support for multiple root versions
ADDED: Support for multiple server distributions

FIXED: Download artifacts from libraries.minecraft.net, even if no url is present

ADDED: Support for merging multiple similar version meta files

FIXED: Quirks with skyrising meta source

ADDED: more maven support functions